отрефакторил FrequencyDictionaryPlugin убрал лишние поля, параметризовал некоторые методы